src/snapshots/afrotd__parser__tests__interpretation_html_3.4.4_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.4.4.I
        </p>
    </div>
    <div class="message-body">
        <p>
            2. und 10 von der B-30. Während der zweiten Halbzeit läuft die Game
            Clock. Team A liegt mit zwei Punkten zurück und hat keine Timeouts
            mehr. Nachdem der Ball spielbereit ist, verursacht Lineman A66
            einen Fehlstart und als die Schiedsrichter die Game Clock anhalten,
            steht sie bei (a) 13 Sekunden oder (b) 8 Sekunden. Team B nimmt
            sowohl die Meterstrafe als auch den Zeitabzug an.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Dead Ball Foul, Fehlstart. 5-Meterstrafe mit
                10-Sekunden-Abzug von der Game Clock, die auf 3 Sekunden
                gesetzt wird. 2. und 15 von der B-35. Die Game Clock startet
                mit dem Signal des Referees. (b) Das Spiel ist vorüber. Team B
                gewinnt.
            </p>
        </details>
    </div>
</article>
