src/snapshots/afrotd__parser__tests__interpretation_html_3.4.4_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.4.4.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Zweite Spielperiode bei ausgeglichenem Punktestand. Beim Snap sind
            0:45 auf der Game Clock. Während des Downs verliert A55 seinen
            Helm. Der rechte Tackle A77 erhält eine Flagge für ein Festhalten.
            Der Ballträger wird inbounds kurz vor der Line-to-Gain getackelt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                A55 muss das Spielfeld für einen Down verlassen. Es gibt keine
                Option zum 10-Sekunden-Abzug von der Game Clock, da die Game
                Clock sowohl für den Helmverlust als auch für die
                Strafdurchführung angehalten wurde. Die Play Clock wird auf 25
                Sekunden gesetzt und die Game Clock startet mit der
                Ballfreigabe durch den Referee oder mit dem Snap, je nach Wahl
                des gefoulten Teams (Regel 3.3.10).
            </p>
        </details>
    </div>
</article>
