src/snapshots/afrotd__parser__tests__interpretation_html_3.5.2_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.5.2.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Nach einem Down, der in einem 1. und 10 an der B-40 resultiert,
            bewegen sich elf Team A-Spieler ohne ein Huddle zu ihren Positionen
            für den nächsten Down. Der Ball ist freigegeben, als A22 aus seiner
            Teamzone heraus auf das Spielfeld läuft und in Höhe der
            Neunmetermarkierungen stehen bleibt. Als er oder die Coaches
            erkennen, dass er der zwölfte Spieler ist, dreht er sich um und
            läuft zurück an die Seitenlinie und in seine Teamzone. Der Ball
            wurde nicht gesnappt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Dead Ball Foul, Auswechselfehler. Nach Definition wurde A22 zu
                einem Spieler, als er in Höhe der Neunmetermarkierungen und
                damit in einer Offense Formation stehen blieb und muss daher
                für einen Down im Spiel bleiben. 5-Meterstrafe. Team A’s Ball,
                1. und 15 von der B-45 (Regel 2.27.9.b).
            </p>
        </details>
    </div>
</article>
